correction mobile

--- a/web/src/scss/custom.scss
+++ b/web/src/scss/custom.scss
@@ -7,7 +7,7 @@
   background: #2A3F54;
 
   @media (max-width: 768px) {
-    padding-bottom: 100px;
+    padding-bottom: 300px;
   }
 }
 
